# Diff-HyMD

./: README.md  pyproject.toml
examples/dppc/: DPPC.toml  W.toml  input.h5  options.toml  reference_aa.npy  topol.toml  training.toml
src/diff_hymd/: barostat.py  config.py  configure_runtime.py  file_io.py  force.py  input_parser.py  integrator.py  logger.py  losses.py  main.py  mdrun.py  models.py  nn_options.py  optimize.py  pm_functions.py  simulate.py  thermostat.py  topology.py
